# VLSILAB_SLAM

ElasticFusionWithICPORBVO/: .gitignore  build.sh
ElasticFusionWithICPORBVO/Core/src/: CMakeLists.txt  Deformation.cpp  Deformation.h  ElasticFusion.cpp  ElasticFusion.h  Makefile  cmake_install.cmake  compile_commands.json
ElasticFusionWithICPORBVO/Core/src/.clangd/index/: CholeskyDecomp.cpp.E53B64FEA56D6562.idx  CholeskyDecomp.h.4668C104683FC00A.idx  ComputePack.cpp.3606D2A350BEF899.idx  ComputePack.h.5D250FCD14FADA51.idx  Defines.h.09063DF47F3B43D4.idx  Deformation.cpp.B59690408E86E50B.idx  Deformation.h.F29C005331DA8ABE.idx  DeformationGraph.cpp.097288ADA6E791F4.idx  DeformationGraph.h.A57AD537A3B6910A.idx  ElasticFusion.cpp.0B1F2F5DF6075713.idx  ElasticFusion.h.A3C154A58DDB2520.idx  FeedbackBuffer.cpp.AE1325B767DE20C4.idx  FeedbackBuffer.h.537CB05B4732362E.idx  Ferns.cpp.1C9D902FEEBBE129.idx  Ferns.h.AFF0714E2E0F008F.idx  FillIn.cpp.9B4F29643E25D995.idx  FillIn.h.4DBA2C63B507594D.idx  GPUConfig.h.6E4DEC7E54B9F8F9.idx  GPUTexture.cpp.AF456E6A31AEE695.idx  GPUTexture.h.CB52B1B08724E041.idx  GlobalModel.cpp.EC03C51CA190C2D7.idx  GlobalModel.h.63A62DDCDEE2AD43.idx  GraphNode.h.133FFBE6ADA9F802.idx  Img.h.1F4213F67D71879F.idx  IndexMap.cpp.8CF73D23B1FEB178.idx  IndexMap.h.92EF64BF19F0DB46.idx  Intrinsics.cpp.ECA021743D4E5260.idx  Intrinsics.h.2B719445D771303A.idx  Jacobian.h.4521D243AA2E7031.idx  OdometryProvider.h.0138DD8F165431C9.idx  OrderedJacobianRow.h.6D64EAE43D3C3403.idx  Parse.cpp.8EF4DDCB7BFC0682.idx  Parse.h.0F0074CE61021281.idx  PoseMatch.h.0E9EA6AB55D9DA06.idx  RGBDOdometry.cpp.A69BD004A93277D9.idx  RGBDOdometry.h.E8239FE2C28B0266.idx  Resize.cpp.961AE59B1893B9A5.idx  Resize.h.3E560774E75AE9A3.idx  Resolution.cpp.89943FB9C748E94C.idx  Resolution.h.9CF879B97475E3EE.idx  (+16 more)
ElasticFusionWithICPORBVO/Core/src/Cuda/: convenience.cuh  cudafuncs.cuh  reduce.cu  types.cuh
ElasticFusionWithICPORBVO/Core/src/Shaders/: sample.geom
ElasticFusionWithICPORBVO/Core/src/Utils/: DeformationGraph.cpp  DeformationGraph.h  GPUConfig.h  OdometryProvider.h  RGBDOdometry.cpp  RGBDOdometry.h
ElasticFusionWithICPORBVO/GUI/src/: .MainController.cpp.swp  CMakeLists.txt  MainController.cpp  MainController.h  compile_commands.json
ElasticFusionWithICPORBVO/GUI/src/.clangd/index/: CameraInterface.h.BB652F9880F52699.idx  GUI.h.B2F8EE6B930CAE2D.idx  GroundTruthOdometry.cpp.0CB40A4E37232C74.idx  GroundTruthOdometry.h.39D40FE981E74631.idx  JPEGLoader.h.1444959174218E0D.idx  LiveLogReader.cpp.51CAB89C0ED29384.idx  LiveLogReader.h.19F033D9720FD19C.idx  LogReader.h.9ECF50230B4FA024.idx  Main.cpp.75E8B23A84354D2A.idx  MainController.cpp.70E5725A6A28EC65.idx  MainController.h.6D4762A32509A342.idx  OpenNI2Interface.cpp.019CC3A0F71FEA65.idx  OpenNI2Interface.h.7AEB02E6CB14E72C.idx  RawLogReader.cpp.48745D4A4E8196F9.idx  RawLogReader.h.CA5BDD353A4C06AB.idx  RealSenseInterface.cpp.0B6EA5CF568F0AE5.idx  RealSenseInterface.h.5E28C1E35CE8B330.idx  ThreadMutexObject.h.212EF0B023E21DF0.idx
ElasticFusionWithICPORBVO/GUI/src/Tools/: GUI.h  GroundTruthOdometry.cpp  GroundTruthOdometry.h  OpenNI2Interface.cpp
ICPORB_VO/: .gitignore  CMakeLists.txt  build.sh  readme.md  rgbd_tum_benchmark.bash  rgbd_tum_example.bash
ICPORB_VO/include/: EAS_ICP.h  ICPORB_VO.h  ICP_VO.h
ICPORB_VO/settings/TUM/: TUM1.yaml  TUM1Elastic.yaml
ICPORB_VO/settings/TUM/associations/: rs_rgb_360_association.txt  rs_rgb_desk2_association.txt  rs_rgb_desk_association.txt  rs_rgb_plant_association.txt  rs_rgb_room_association.txt  rs_rgb_rpy_association.txt  rs_rgb_xyz_association.txt
ICPORB_VO/settings/TUM/evaluation_tool/: evaluate_rpe.py
ICPORB_VO/src/: EAS_ICP.cpp  ICPORB_VO.cpp  ICP_VO.cpp  pcl_normal.hpp
ICPORB_VO/tools/: EASICP_example.cpp  EASICP_registration.cpp  ICPORBVO_example.cpp  ICPVO_example.cpp  rgbd_tum.cpp  rgbd_tum_off.cpp  testEigenProduct.cpp  testORBG2O.cpp  test_CVMat_copy.cpp  test_ORBSLAM2.cpp
